GL-fix button alignment and checkbox size

--- a/src/components/GoalComponent/GoalComponent.scss
+++ b/src/components/GoalComponent/GoalComponent.scss
@@ -9,6 +9,10 @@
   position: relative;
   justify-content: center;
   flex-direction: column;
+  &__buttons {
+    display: flex;
+    justify-content: center;
+  }
 
   .matched {
     width: 100%;
