--- a/src/components/ListWithCheckbox/ListWithCheckbox.scss
+++ b/src/components/ListWithCheckbox/ListWithCheckbox.scss
@@ -31,7 +31,7 @@
     .option_goal {
       font-size: 15px;
       line-height: 23px;
-      padding: 0 0 0 15px;
+      margin: 0 0 0 15px;
     }
 
     .option_inactive {
